--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <main>
     <img src="img/bag.png" alt="Sacola de Compras">
     <form>
-        <input type="text" placeholder="Digite o item que deseja adicionar"/>
-        <button>Salvar Item</button>
+        <input id="input-item" type="text" placeholder="Digite o item que deseja adicionar"/>
+        <button id="adicionar-botao">Salvar Item</button>
     </form>
 
     
@@ -27,21 +27,26 @@
         <hr/>
         
         <li>
-            <div>
-                <div>
-                    <input type="checkbox"/>
+            <div class="item-lista-container">
+                <div class="container-nome-compra">
+                    <div class="checkbox-container">
+                        <label for="checkbox-1">
+                            <input type="checkbox" class="checkbox-input" id="checkbox-1"/>
+                            <div class="checkbox-custom checked"></div>
+                        </label>
+                    </div>
                     <p>Motor V8</p>
                 </div>
                 <div>
-                    <button>
+                    <button class="botao-acao">
                         <img src="img/delete.svg" alt="Deletar">
                     </button>
-                    <button>
+                    <button class="botao-acao">
                         <img src="img/edit.svg" alt="Editar">
                     </button>
                 </div>
             </div>
-            <p>Terça-feira (12/11/2024) às 8:30</p>
+            <p class="item-lista-texto">Terça-feira (12/11/2024) às 8:30</p>
         </li>
     </ul>
 </main>
