Aula 01 - Integrando JS pt2

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         
 
-        <ul>
+        <ul id="lista-de-compras">
             <h2>Lista de Compras</h2>
             <hr/>
             
