Aula 03 - Gerando dados dinâmicos pt3

--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
                             </button>
                         </div>
                     </div>
-                    <p class="item-lista-texto">Terça-feira (12/11/2024) às 8:30</p>
+                    <p class="texto-data">Terça-feira (12/11/2024) às 8:30</p>
                 </li>
             </ul>
             <h2>Comprado</h2>
             <hr/>
             <ul id="lista-comprados">
-                
+
             </ul>
         </div>
 
