--- a/index.html
+++ b/index.html
@@ -25,29 +25,7 @@
             <ul id="lista-de-compras">
                 <h2>Lista de Compras</h2>
                 <hr/>
-                
-                <li>
-                    <div class="item-lista-container">
-                        <div class="container-nome-compra">
-                            <div class="checkbox-container">
-                                <label for="checkbox-1">
-                                    <input type="checkbox" class="checkbox-input" id="checkbox-1"/>
-                                    <div class="checkbox-custom checked"></div>
-                                </label>
-                            </div>
-                            <p>Motor V8</p>
-                        </div>
-                        <div>
-                            <button class="botao-acao">
-                                <img src="img/delete.svg" alt="Deletar">
-                            </button>
-                            <button class="botao-acao">
-                                <img src="img/edit.svg" alt="Editar">
-                            </button>
-                        </div>
-                    </div>
-                    <p class="texto-data">Terça-feira (12/11/2024) às 8:30</p>
-                </li>
+                <p id="mensagem-lista-vazia" style="display: block;">Sua lista está vazia.</p>
             </ul>
             <h2>Comprado</h2>
             <hr/>
@@ -57,7 +35,7 @@
         </div>
 
     </main>
-    <script src="scripts.js"></script>
+    <script src="scripts.js" type="module"></script>
 
 </body>
 
