Desafio 2 - Verficar tamanho da lista de itens comprados

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <hr/>
                 <p id="mensagem-lista-vazia" style="display: block;">Sua lista está vazia.</p>
             </ul>
-            <h2>Comprado</h2>
+            <h2 id="titulo-lista-comprados" style="display: block;">Comprados</h2>
             <hr/>
             <ul id="lista-comprados">
 
